Refactor FileComponent: use Path internally and expose only batch methods
Co-authored-by: deathbit <40948107+deathbit@users.noreply.github.com>